--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
     <script>
       // Configuration
-      const API_URL = `${window.location.origin}/api/chat`;
+      const API_URL = "https://seyo009-ai-customer-chatbot.hf.space/api/chat";
       const MAX_RETRIES = 3;
       const RETRY_DELAY = 1000; // ms
 
